--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
-<img src="assets/Food Magazine.jpg" width="1920" height="2400" alt=""/>
+<p>-<img src="assets/Food Magazine.jpg" width="512" height="640" alt=""/><br>
+</p>
+<p><a href="page1.html">Go to Page 1</a></p>
+<p><a href="page2.html">Go to Page 2</a></p>
 </body>
 </html>
